@@ -32,6 +32,10 @@ Changes in @NEW@:
     * A new Conary proxy setting, injectCapsuleContentServers, controls
       changeset content injection for proxies talking only to hosts in
       this list. (CNY-3261)
+    * Conary no longer uses regular expressions to represent manifest
+      files, and so will not raise OverflowError for manifests with
+      many files on platforms with a restricted regular expression
+      code size. (CNY-3282)
 
   o Bug Fixes:
     * In-core changesets could be merged into a ReadOnlyChangeSet a single
